sourcegraph/low-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sourcegraph
spec:
  ports:
  - name: http
    port: 7080
    targetPort: frontend
  - name: monitor
    port: 3370
  selector:
    app: sourcegraph
  type: ClusterIP
